--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ h2 {
     line-height: 52px;
 }
 
-/* #tabbed-content li{
+#tabbed-content li {
     display: inline-block;
     padding: 10px 14px;
     background: #ddd;
@@ -135,12 +135,12 @@ h2 {
     cursor: pointer;
     margin-right: 10px;
 }
-#tabbed-content .tab{
+#tabbed-content .panel {
     display: none;
     border: 1px solid #ddd;
     padding: 0 10px;
     border-radius: 4px;
 }
-#tabbed-content .tab.active{
+#tabbed-content .panel.active {
     display: block;
-} */
+}
